--- a/VAE.ipynb
+++ b/VAE.ipynb
@@ -125,9 +125,9 @@
     "        z_mean, z_log_var = tf.split(encoded, num_or_size_splits=2, axis=1)\n",
     "        z = self.reparameterize(z_mean, z_log_var)\n",
     "        reconstructed = self.decoder(z)\n",
-    "        # Add KL divergence regularization loss.\n",
+    "        # Add KL divergence regularization loss \n",
     "        kl_loss = -0.5 * tf.reduce_mean(z_log_var - tf.square(z_mean) - tf.exp(z_log_var) + 1)\n",
-    "        kl_coefficient = 0.001  # Example coefficient, adjust based on experimentation.\n",
+    "        kl_coefficient = 0.001  # Got this through experimentation with various values\n",
     "        self.add_loss(kl_coefficient * kl_loss)\n",
     "        return reconstructed\n",
     "\n",
@@ -155,7 +155,7 @@
     "    title = f'Latent Dimensions: {latent_dim}'\n",
     "    plt.suptitle(title, fontsize=20)\n",
     "    for i in range(n):\n",
-    "        # Display original\n",
+    "        # Show original\n",
     "        ax = plt.subplot(2, n, i + 1)\n",
     "        plt.imshow(original[i].reshape(28, 28))\n",
     "        plt.title(\"Test Original\")\n",
@@ -163,7 +163,7 @@
     "        ax.get_xaxis().set_visible(False)\n",
     "        ax.get_yaxis().set_visible(False)\n",
     "\n",
-    "        # Display reconstruction\n",
+    "        # Show reconstruction\n",
     "        ax = plt.subplot(2, n, i + 1 + n)\n",
     "        plt.imshow(reconstructed[i].reshape(28, 28))\n",
     "        plt.title(\"Test Reconstructed\")\n",
@@ -283,7 +283,7 @@
     }
    ],
    "source": [
-    "# Predict and visualize the reconstruction\n",
+    "# Recontructed images with 2 latent dimensions\n",
     "x_test_encoded = vae.predict(x_test, batch_size=64)\n",
     "plot_images(x_test, x_test_encoded,latent_dim)"
    ]
@@ -396,7 +396,7 @@
     }
    ],
    "source": [
-    "# Predict and visualize the reconstruction\n",
+    "# Recontructed images with 4 latent dimensions\n",
     "x_test_encoded = vae.predict(x_test, batch_size=64)\n",
     "plot_images(x_test, x_test_encoded,latent_dim)"
    ]
@@ -510,7 +510,7 @@
     }
    ],
    "source": [
-    "# Predict and visualize the reconstruction\n",
+    "# Recontructed images with 8 latent dimensions\n",
     "x_test_encoded = vae.predict(x_test, batch_size=64)\n",
     "plot_images(x_test, x_test_encoded,latent_dim)"
    ]
@@ -617,7 +617,7 @@
     }
    ],
    "source": [
-    "# Predict and visualize the reconstruction\n",
+    "# Recontructed images with 16 latent dimensions\n",
     "x_test_encoded = vae.predict(x_test, batch_size=64)\n",
     "plot_images(x_test, x_test_encoded,latent_dim)"
    ]
@@ -724,7 +724,7 @@
     }
    ],
    "source": [
-    "# Predict and visualize the reconstruction\n",
+    "# Recontructed images with 32 latent dimensions\n",
     "x_test_encoded = vae.predict(x_test, batch_size=64)\n",
     "plot_images(x_test, x_test_encoded,latent_dim)"
    ]
@@ -837,7 +837,7 @@
     }
    ],
    "source": [
-    "# Predict and visualize the reconstruction\n",
+    "# Recontructed images with 64 latent dimensions\n",
     "x_test_encoded = vae.predict(x_test, batch_size=64)\n",
     "plot_images(x_test, x_test_encoded,latent_dim)"
    ]
@@ -879,7 +879,7 @@
    ],
    "source": [
     "mse_list = [mse1, mse2, mse3, mse4, mse5, mse6]\n",
-    "plt.plot(mse_list)"
+    "plt.plot(mse_list) # Can clearly see the mse reduce as we increase latent dimensions"
    ]
   }
  ],
